RESOLVED FIXED242058
Add RuleSet bucket for attribute selectors
https://bugs.webkit.org/show_bug.cgi?id=242058
Summary Add RuleSet bucket for attribute selectors
Antti Koivisto
Reported 2022-06-28 02:47:24 PDT
Faster attribute selectors in subject position.
Attachments
Patch (11.16 KB, patch)
2022-06-28 04:18 PDT, Antti Koivisto
no flags
Patch (11.16 KB, patch)
2022-06-29 02:09 PDT, Antti Koivisto
no flags
Patch (11.37 KB, patch)
2022-06-29 03:48 PDT, Antti Koivisto
no flags
Patch (11.12 KB, patch)
2022-06-29 22:09 PDT, Antti Koivisto
no flags
Patch (12.68 KB, patch)
2022-06-30 02:03 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-06-28 02:48:27 PDT
Antti Koivisto
Comment 2 2022-06-28 04:18:50 PDT
Antti Koivisto
Comment 3 2022-06-29 02:09:52 PDT
Antti Koivisto
Comment 4 2022-06-29 03:48:10 PDT
EWS
Comment 5 2022-06-29 09:22:08 PDT
Committed 251950@main (bd435a9ae24e): <https://commits.webkit.org/251950@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460538 [details].
Fujii Hironori
Comment 6 2022-06-29 20:17:40 PDT
Bug 242159 – REGRESSION(251950@main) Crash under WebCore::Style::ElementRuleCollector::collectMatchingRules
Antti Koivisto
Comment 7 2022-06-29 22:09:30 PDT
Reopening to attach new patch.
Antti Koivisto
Comment 8 2022-06-29 22:09:32 PDT
Antti Koivisto
Comment 9 2022-06-30 02:03:04 PDT
EWS
Comment 10 2022-06-30 04:32:56 PDT
Committed 251989@main (c27218b87632): <https://commits.webkit.org/251989@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460574 [details].
Note You need to log in before you can comment on or make changes to this bug.