Add RuleSet bucket for attribute selectors https://bugs.webkit.org/show_bug.cgi?id=242058 <rdar://95790940>

Reviewed by Alan Bujtas.

Currently attribute selectors don't get classified into rule buckets of their own (unlike class and id selectors).
Attribute selectors are pretty popular these days so it makes sense to optimize this case too.

* Source/WebCore/style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::collectMatchingRules):

Check the attribute buckets for element attributes.

* Source/WebCore/style/RuleData.cpp:
(WebCore::Style::computeMatchBasedOnRuleHash):
* Source/WebCore/style/RuleSet.cpp:
(WebCore::Style::shouldHaveBucketForAttributeName):

Don't bucket lazy attributes that would require synchronization.

(WebCore::Style::RuleSet::addRule):
(WebCore::Style::RuleSet::traverseRuleDatas):
(WebCore::Style::RuleSet::shrinkToFit):
* Source/WebCore/style/RuleSet.h:
(WebCore::Style::RuleSet::hasAttributeRules const):
(WebCore::Style::RuleSet::attributeRules const):
(WebCore::Style::RuleSet::tagRules const):

Canonical link: https://commits.webkit.org/251950@main